--- a/Natours/starter/sass/abstracts/_mixins.scss
+++ b/Natours/starter/sass/abstracts/_mixins.scss
@@ -12,3 +12,45 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+//media query manager
+/*
+0-600px:  phone
+600-900:  tablet portrait
+900-1200: tablet landscape
+1200-1800: Desktop   normal styles desktop first approach
+1800px + : Big desktop
+
+$breakpoint argument choices
+-phone
+-tab-port
+-tab-land
+-big-desktop
+
+ORDER: base + typography> general layout + grid>page layout> components
+
+1em=16px
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    } //600 px
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    } //900px
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    } //1200px
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    } // 1800+px
+  }
+}
