--- a/Natours/starter/sass/base/_base.scss
+++ b/Natours/starter/sass/base/_base.scss
@@ -7,10 +7,29 @@
 }
 
 html {
-  //This defines what 1rem is.
+  //This defines what 1rem is = 10px  10px/16px = 62.5%
   font-size: 62.5%;
+
+  @include respond(tab-land) {
+    //width<1200px
+    font-size: 56.25%;
+  } // 1rem = 9px, 9/16 = 50%
+
+  @include respond(tab-port) {
+    //width<900px
+    font-size: 50%;
+  } // 1rem = 9px, 9/16 = 50%
+
+  @include respond(big-desktop) {
+    font-size: 75%;
+  } //1rem = 12px, 12/16 = 50%
 }
 
 body {
   box-sizing: border-box;
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
